=== HEAD

* Handle altering column NULL settings for varchar(max) and text columns on MSSQL (Ilja Resch)

* Remove Sequel.firebird and Sequel.informix adapter methods (jeremyevans)

* Make graph_each extension handle result set splitting when using Dataset#first (jeremyevans)

* Allow raising Sequel::ValidationFailed and Sequel::HookFailed without an argument (jeremyevans)

* Allow schema_dumper to handle :qualify=>true option on PostgreSQL (jeremyevans)

* Allow foreign_key schema method to handle SQL::Identifier and SQL::QualifiedIdentifier as 2nd argument (jeremyevans)

=== 4.32.0 (2016-03-01)

* Use mutex for synchronizing access to association reflection cache on MRI (jeremyevans)

* Add Dataset#delete_from on MySQL, allowing deletions from multiple tables in a single query (jeremyevans) (#1146)

* Add no_auto_literal_strings extension, which makes SQL injection vulnerabilities less likely (jeremyevans)

* Add Model.default_association_options, for setting option defaults for all future associations (jeremyevans)

* Support :association_pks_nil association option in association_pks setter for determining how to handle nil (jeremyevans)

* Make association_pks setter handle empty array correctly when :delay_pks is set (jeremyevans)

* Add a setter method for one_through_one associations (jeremyevans)

* Include :remarks entry in JDBC schema parsing output, containing comments on the column (olleolleolle) (#1143)

* Support :eager_reload and :eager options to associations in tactical_eager_loading plugin (jeremyevans)

* Make tactical_eager_loading not eager load if passing proc or block to association method (jeremyevans)

* Make eager_each plugin handle eager loading for Dataset#first and similar methods (jeremyevans)

=== 4.31.0 (2016-02-01)

* Convert types in association_pks setters before saving them, instead of just before running queries (jeremyevans)
